data/all_generated_tests/raw_wast_tests/call_ImproperFunctionCallorReturnHandling_3643.wast
;; 2. **Test Description**:  Invoke a function with fewer arguments than required, and observe if an error is correctly raised.

(assert_invalid
  (module
    (type (func (param i32 i32) (result i32)))
    (func $incomplete-arguments (call 1 (i32.const 42)))
    (func (param i32 i32) (result i32) (i32.add (local.get 0) (local.get 1)))
  )
  "type mismatch"
)